--- a/Infilect's Task/package.json
+++ b/Infilect's Task/package.json
@@ -10,9 +10,11 @@
   "license": "ISC",
   "dependencies": {
     "angular": "^1.6.9",
+    "angular-chart.js": "^1.1.1",
     "angular-material": "^1.1.10",
     "angular-route": "^1.6.9",
     "bootstrap": "^3.3.7",
-    "jquery": "^3.3.1"
+    "jquery": "^3.3.1",
+    "moment": "^2.22.2"
   }
 }
